@@ -20,6 +20,7 @@ Collate:
     'cat2col.R'
     'comp2col.R'
     'createRec.R'
+    'datasets.R'
     'dens2col.R'
     'drawLegend.R'
     'index2col.R'
@@ -27,7 +28,6 @@ Collate:
     'overlap.R'
     'pivotSize.R'
     'pkg.R'
-    'sbsData.R'
     'str2rect.R'
     'squarified.R'
     'tmClick.R'
