@@ -1,0 +1,15 @@
+#' Structural Business Statistics Data
+#'
+#' Fictive structural business statistics data of 2008 and 2009.
+#'
+#' @name sbsData
+{}
+
+#' GNI 2010 Data
+#' 
+#' Gross national income (per capita) in dollars per country in 2010.
+#'
+#' @name GNI2010
+#' @references 
+#' \href{http://data.worldbank.org/data-catalog/health-nutrition-and-population-statistics}{Website of The World Bank - Health Nutrition and Population Statistics}
+{}
