@@ -1,6 +1,0 @@
-#' Structural Business Statistics Data
-#'
-#' Fictive structural business statistics data of 2008 and 2009.
-#'
-#' @name sbsData
-{}
