@@ -1,7 +1,10 @@
 value2col <-
     function(dat, position.legend, palette, range) {
+        maxlev <- max(dat$clevel)
+        
+        #browser()
         if (any(is.na(range))) {
-            range <- range(dat$value2)
+            range <- range(dat$value2[dat$clevel==maxlev])
             if (range[1] > 0) {
                 ## all positive
                 range[1] <- 0
@@ -38,11 +41,11 @@ value2col <-
         
         scale <- floor((dat$value2 - minP) / (maxP - minP) * 98) + 1
         if (any(scale<1)) {
-            warning("Values found that are lower than the minimum of range")
+            if (any(scale<1 & dat$clevel==maxlev)) warning("Values found that are lower than the minimum of range")
             scale[scale<1] <- 1
         }
         if (any(scale>99)) {
-            warning("Values found that are higher than the maximum of range")
+            if (any(scale>99 & dat$clevel==maxlev)) warning("Values found that are higher than the maximum of range")
             scale[scale>99] <- 99
         }
         
